Correct default button color on iOS

--- a/src/App.sass
+++ b/src/App.sass
@@ -33,6 +33,8 @@ body, html
     margin: 0px
     padding: 0px
     
+button
+    color: $textColor
 a
     color: inherit
 
